airflow/logs/dag_id=simple_dag/run_id=scheduled__2022-07-19T213300+0000/task_id=create_pg_table/attempt=1.log
[2022-07-19 21:34:09,037] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: simple_dag.create_pg_table scheduled__2022-07-19T21:33:00+00:00 [queued]>
[2022-07-19 21:34:09,117] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: simple_dag.create_pg_table scheduled__2022-07-19T21:33:00+00:00 [queued]>
[2022-07-19 21:34:09,150] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-07-19 21:34:09,172] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-07-19 21:34:09,181] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-07-19 21:34:09,269] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_pg_table> on 2022-07-19 21:33:00+00:00
[2022-07-19 21:34:09,299] {standard_task_runner.py:52} INFO - Started process 13862 to run task
[2022-07-19 21:34:09,311] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'simple_dag', 'create_pg_table', 'scheduled__2022-07-19T21:33:00+00:00', '--job-id', '892', '--raw', '--subdir', 'DAGS_FOLDER/first_dag.py', '--cfg-path', '/tmp/tmp_a735q57', '--error-file', '/tmp/tmpq6_yresg']
[2022-07-19 21:34:09,314] {standard_task_runner.py:80} INFO - Job 892: Subtask create_pg_table
[2022-07-19 21:34:09,548] {task_command.py:370} INFO - Running <TaskInstance: simple_dag.create_pg_table scheduled__2022-07-19T21:33:00+00:00 [running]> on host bc1c26dbd036
[2022-07-19 21:34:09,962] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=simple_dag
AIRFLOW_CTX_TASK_ID=create_pg_table
AIRFLOW_CTX_EXECUTION_DATE=2022-07-19T21:33:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-07-19T21:33:00+00:00
[2022-07-19 21:34:10,045] {base.py:68} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-07-19 21:34:10,241] {dbapi.py:213} INFO - Running statement: 
            create table if not exists traffic_flow (
                track_id; type; traveled_d; avg_speed; lat; lon; speed; lon_acc; lat_acc; time,
                primary key (track_id)
            )
        , parameters: None
[2022-07-19 21:34:10,269] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 3:                 track_id; type; traveled_d; avg_speed; lat; ...
                                ^

[2022-07-19 21:34:10,293] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=simple_dag, task_id=create_pg_table, execution_date=20220719T213300, start_date=20220719T213409, end_date=20220719T213410
[2022-07-19 21:34:10,436] {standard_task_runner.py:97} ERROR - Failed to execute job 892 for task create_pg_table (syntax error at or near ";"
LINE 3:                 track_id; type; traveled_d; avg_speed; lat; ...
                                ^
; 13862)
[2022-07-19 21:34:10,495] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-07-19 21:34:10,616] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
